[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/polygon_path/gui/polygon_path_controls.gd" type="Script" id=1]
[ext_resource path="res://addons/polygon_path/gui/edit_mode_group.tres" type="ButtonGroup" id=2]
[ext_resource path="res://addons/polygon_path/icons/select.svg" type="Texture" id=3]
[ext_resource path="res://addons/polygon_path/icons/create.svg" type="Texture" id=4]
[ext_resource path="res://addons/polygon_path/icons/delete.svg" type="Texture" id=5]

[node name="HBoxContainer" type="HBoxContainer"]
margin_right = 426.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
script = ExtResource( 1 )

[node name="VSeparator" type="VSeparator" parent="."]
margin_right = 4.0
margin_bottom = 26.0

[node name="Select" type="Button" parent="."]
margin_left = 8.0
margin_right = 36.0
margin_bottom = 26.0
rect_min_size = Vector2( 26, 0 )
toggle_mode = true
pressed = true
group = ExtResource( 2 )
icon = ExtResource( 3 )
flat = true

[node name="Add" type="Button" parent="."]
margin_left = 40.0
margin_right = 68.0
margin_bottom = 26.0
rect_min_size = Vector2( 26, 0 )
toggle_mode = true
group = ExtResource( 2 )
icon = ExtResource( 4 )
flat = true

[node name="Remove" type="Button" parent="."]
margin_left = 72.0
margin_right = 100.0
margin_bottom = 26.0
rect_min_size = Vector2( 26, 0 )
toggle_mode = true
group = ExtResource( 2 )
icon = ExtResource( 5 )
flat = true

[node name="ClosedCurve" type="CheckBox" parent="."]
margin_left = 104.0
margin_right = 214.0
margin_bottom = 26.0
rect_min_size = Vector2( 30, 0 )
text = "Closed curve"
flat = true

[node name="ShowPolygon" type="CheckBox" parent="."]
margin_left = 218.0
margin_right = 333.0
margin_bottom = 26.0
rect_min_size = Vector2( 30, 0 )
text = "Show polygon"
flat = true

[node name="ShowGrid" type="CheckBox" parent="."]
margin_left = 337.0
margin_right = 426.0
margin_bottom = 26.0
rect_min_size = Vector2( 30, 0 )
text = "Show grid"
flat = true
[connection signal="pressed" from="Select" to="." method="_on_select"]
[connection signal="pressed" from="Add" to="." method="_on_add"]
[connection signal="pressed" from="Remove" to="." method="_on_remove"]
[connection signal="toggled" from="ClosedCurve" to="." method="_on_close_curve"]
[connection signal="toggled" from="ShowPolygon" to="." method="_on_show_polygon"]
[connection signal="toggled" from="ShowGrid" to="." method="_on_show_grid"]
